app/assets/stylesheets/tour.css.scss
.wrapper {
  text-align: center;
}

/* select */
.title {
	margin: 80px 0;
}

.pic .right{
	margin-left: 150px;
}

/* tour */

h2 {
  margin: 80px 0;
  padding: 0;
  font-size: 20px;
  font-weight: normal;
}

.tour {
  margin-bottom: 100px;
}
.tour .text {
  margin-top: 20px;
  font-size: 12px;
}

